--- a/UserApp/.github/workflows/android.yml
+++ b/UserApp/.github/workflows/android.yml
@@ -1,1 +1,35 @@
+name: Build Android APKs
 
+on:
+  push:
+    branches: [ "main" ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Build Admin App
+        run: |
+          cd AdminApp
+          ./gradlew assembleDebug
+
+      - name: Build User App
+        run: |
+          cd UserApp
+          ./gradlew assembleDebug
+
+      - name: Upload APKs
+        uses: actions/upload-artifact@v2
+        with:
+          name: Built-APKs
+          path: |
+            AdminApp/app/build/outputs/apk/debug/app-debug.apk
+            UserApp/app/build/outputs/apk/debug/app-debug.apk
