--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,11 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: 11
 
       - name: Install Gradle
@@ -22,15 +23,15 @@ jobs:
       - name: Build Admin App
         run: |
           cd AdminApp
-          gradle build
+          gradle assembleDebug
 
       - name: Build User App
         run: |
           cd UserApp
-          gradle build
+          gradle assembleDebug
 
       - name: Upload APKs
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: Built-APKs
           path: |
