--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,18 +17,25 @@ jobs:
           distribution: 'temurin'
           java-version: 11
 
-      - name: Install Gradle
-        run: sudo apt-get install gradle -y
+      - name: Prepare Gradle Wrapper (AdminApp)
+        run: |
+          cd AdminApp
+          gradle wrapper
 
       - name: Build Admin App
         run: |
           cd AdminApp
-          gradle assembleDebug
+          ./gradlew assembleDebug
+
+      - name: Prepare Gradle Wrapper (UserApp)
+        run: |
+          cd UserApp
+          gradle wrapper
 
       - name: Build User App
         run: |
           cd UserApp
-          gradle assembleDebug
+          ./gradlew assembleDebug
 
       - name: Upload APKs
         uses: actions/upload-artifact@v4
